# ai-genai-context-memory

./: .gitignore  README.md  pyproject.toml
config/: application-dev.yaml  application-prod.yaml  application-test.yaml  application.yaml
scripts/: run_dev.py  seed_data.py
src/memory_graph/: __init__.py  main.py
src/memory_graph/api/: __init__.py  context_router.py  graph_router.py  health_router.py  memory_router.py
src/memory_graph/config/: __init__.py  logging_config.py  settings.py
src/memory_graph/context/: __init__.py  context_builder.py  context_formatter.py  context_ranker.py  token_budget.py
src/memory_graph/embeddings/: __init__.py  embedding_cache.py  embedding_service.py  similarity_search.py
src/memory_graph/extraction/: __init__.py  extraction_parser.py  extraction_prompts.py  extraction_queue.py  extraction_service.py
src/memory_graph/graph/: __init__.py  graph_manager.py  graph_query.py  graph_sync.py
src/memory_graph/middleware/: __init__.py  error_handler.py  request_logging.py
src/memory_graph/models/: __init__.py  api_requests.py  api_responses.py  memory_edge.py  memory_node.py  memory_types.py  proxy_models.py
src/memory_graph/persistence/: __init__.py  database.py  edge_repository.py  embedding_repository.py  node_repository.py
src/memory_graph/proxy/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py
tests/unit/: test_context_ranker.py  test_extraction_parser.py  test_graph_manager.py  test_input_validator.py  test_memory_edge.py  test_memory_node.py  test_node_repository.py  test_similarity_search.py  test_token_budget.py
(+9 files in other folders)
